<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvOptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_square_foot"
        android:drawablePadding="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/str_unit"
        android:textColor="@color/girlBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOptionInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/str_unit_info"
        android:textColor="@color/girlGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvOptionName"
        app:layout_constraintTop_toBottomOf="@+id/tvOptionName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvOptionName"
        app:layout_constraintEnd_toEndOf="@+id/tvOptionInfo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvOptionName"
        app:layout_constraintTop_toTopOf="@+id/tvOptionName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/girlBlack"
                android:button="@null"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/str_celcius"
                android:textColor="@color/girlWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rbF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/str_fahrenheit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rbC"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>