<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTemp"
        app:layout_constraintStart_toStartOf="@+id/tvWeatherType"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherType">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBgWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sunny" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvRain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_dash"
        android:textColor="@color/girlBlack"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/tvRainName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvRainName"
        app:layout_constraintTop_toBottomOf="@+id/tvRainName" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:text="@string/str_dash"
        android:textColor="@color/girlBlack"
        android:textSize="69sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWeatherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/str_dash"
        android:textColor="@color/sunnyPink"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_dash"
        android:textColor="@color/girlBlack"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_dash"
        android:textColor="@color/girlBlack"
        android:textSize="22sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/tvWindName"
        app:layout_constraintStart_toStartOf="@+id/tvWindName"
        app:layout_constraintTop_toBottomOf="@+id/tvWindName" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_dash"
        android:textColor="@color/girlBlack"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/tvHumidityName"
        app:layout_constraintStart_toStartOf="@+id/tvHumidityName"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidityName" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_dash"
        android:textColor="@color/girlGrey"
        android:textSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/tvLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvAddInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/str_add_info"
        android:textColor="@color/girlBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

    <TextView
        android:id="@+id/tvRainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_sunny_rain"
        android:text="@string/str_rain"
        android:textColor="@color/girlGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAddInfo"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/tvAddInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvAddInfo" />

    <TextView
        android:id="@+id/tvHumidityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_sunny_hum"
        android:text="@string/str_humidity"
        android:textColor="@color/girlGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tvWindName"
        app:layout_constraintStart_toEndOf="@+id/tvRainName"
        app:layout_constraintTop_toBottomOf="@+id/tvAddInfo" />

    <TextView
        android:id="@+id/tvWindName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:drawableTop="@drawable/ic_sunny_wind"
        android:text="@string/str_wind"
        android:textColor="@color/girlGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/tvAddInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>